# queryden

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  BUILD_WINDOWS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: beta.yml  ci.yml  deploy-website.yml  release.yml
dev/test-db/: README.md  docker-compose.yml
dev/test-db/init/: 01-schema.sql  02-seed.sql  03-functions-triggers.sql
dev/test-db/test-scripts/: 01-multi-statement.sql  02-cast-no-var-dialog.sql  03-real-variables.sql  04-trigger-with-cast.sql  05-create-table-typed.sql  06-perf-smoke.sql  07-int-arrays.sql
public/: docs.html  loader.js.map
scripts/: bump-version.js  doc-gen.js
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/patches/tauri-plugin-sql/src/decode/: postgres.rs
src-tauri/src/: cli.rs  lib.rs  main.rs  ssh.rs  storage.rs  sysinfo.rs  updater.rs
src-tauri/windows/: installer-hooks.nsh
src/components/editor/: QueryEditor.tsx  completionContext.test.ts  completionContext.ts  monacoSetup.ts
src/components/explorer/: ConnectionDialog.tsx  CreateDatabaseDialog.tsx  CreateTableDialog.tsx  DatabaseExplorer.tsx  FilesExplorer.tsx  SchemaSelectionDialog.tsx  filterProviders.test.ts  filterProviders.ts
src/components/help/: HelpDialog.tsx  UpdateNotification.tsx
src/components/layout/: AppLayout.tsx  EmptyStateLauncher.tsx  MainContent.tsx  Sidebar.tsx  Toolbar.tsx
src/components/results/: ResultsPanel.tsx  VisualOptimizer.tsx
src/components/settings/: SettingsDialog.tsx
src/components/tools/: AIAssistantDialog.tsx  ActivityMonitor.tsx  AddRowModal.tsx  CloneDialog.tsx  CompareDialog.tsx  CompareDialog.tsx.backup  DefinitionModal.tsx  MultiQueryDialog.tsx  ToolGuideWizard.tsx
src/components/ui/: CliDownloadDialog.tsx  ConfirmDialog.tsx  ErrorBoundary.tsx  GridView.tsx  LocalHistoryDialog.tsx  PasswordInput.tsx  PsqlHelpDialog.tsx  PsqlWindow.tsx  VariableSubstitutionDialog.test.ts  VariableSubstitutionDialog.tsx
src/config/: app.ts  providers.ts
src/contexts/: ConnectionContext.tsx  ThemeContext.tsx  useConnections.ts
src/hooks/: useAppInfo.ts
src/lib/: ipc.ts  revealAppWindow.ts
src/store/: aiStore.ts  cliStore.ts  keymapStore.ts  localHistoryStore.ts  queryHistoryStore.ts  savedQueryStore.ts  settingsStore.ts  updateStore.ts  vaultStore.ts
src/styles/: globals.css
src/utils/: SqlFormatter.test.ts  SqlFormatter.ts  applyQueryLimit.test.ts  applyQueryLimit.ts  binaryUtils.ts  folderTree.test.ts  folderTree.ts  globalShortcuts.test.ts  globalShortcuts.ts  logger.test.ts  logger.ts  splitStatements.test.ts  splitStatements.ts  sqlSecurity.test.ts  sqlSecurity.ts
website/: .env.example  .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
website/public/: robots.txt
website/src/: content.config.ts
website/src/components/: Callout.astro  DocsSearch.astro  ProductImage.astro  SignatureMesh.astro
website/src/layouts/: DocsLayout.astro  Layout.astro
website/src/lib/: changelog.ts  competitors.ts  docs.ts  site.ts
website/src/pages/: 404.astro  changelog.astro  docs.astro  download.astro  index.astro  roadmap.astro  security.astro
website/src/pages/compare/: [slug].astro  index.astro
website/src/pages/docs/: [...slug].astro  index.astro
website/src/styles/: site.css
(+12 files in other folders)
