[package]
name = "queryden"
version = "1.0.19"
description = "A modern multi-database manager built with Tauri, React, and TypeScript"
authors = ["QueryDen Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/openidle-dev/queryden"
homepage = "https://github.com/openidle-dev/queryden"

[lib]
name = "queryden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite", "postgres", "mysql"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sysinfo = "0.33"
sha2 = "0.11.0"
hex = "0.4.3"
argon2 = "0.5"
password-hash = "0.5"
keyring = { version = "3" }
ssh2 = "0.9"
tokio = { version = "1", features = ["process", "io-util", "rt-multi-thread", "fs", "rt"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
zip = "2"
flate2 = "1"
tar = "0.4"
which = "7"
url = "2"
time = { version = "0.3", features = ["formatting"] }

[patch.crates-io]
# Patch tauri-plugin-sql to handle PostgreSQL types like INTERVAL, OID, arrays, etc.
# that the upstream version doesn't support yet.
tauri-plugin-sql = { path = "patches/tauri-plugin-sql" }

[profile.release]
strip = true
lto = "fat"          # Whole-program LTO: smaller binary, longer compile
codegen-units = 1    # One codegen unit: maximizes LTO/inlining opportunities
incremental = false  # Explicitly disable; incremental defeats LTO and is off by default in release
panic = "abort"
